--- a/staff/templates/staff/edit/edit.html
+++ b/staff/templates/staff/edit/edit.html
@@ -76,7 +76,7 @@
                       <a href="{% url 'review-room' %}" class="nodecor">
                         <div class="landing-panel panel panel-info">
                             <div class="landing-panel-heading">
-                                <h3 class="landing-panel-title">Edit a selection</h3>
+                                <h3 class="landing-panel-title">Edit a transaction</h3>
                             </div>
                             <div class="panel-body">
                                 Use this to make changes to the demographics in a specific room.<br><br>
