--- a/staff/templates/staff/edit/transaction.html
+++ b/staff/templates/staff/edit/transaction.html
@@ -41,7 +41,7 @@
       
     <div class="container-fluid" id="main">
         <div class="starter-template">
-        <h1>Review a Room</h1>
+        <h1>Review a Transaction</h1>
             <p class="lead">
                 {{ HeaderText }}
             </p>
