--- a/staff/templates/staff/header.html
+++ b/staff/templates/staff/header.html
@@ -26,7 +26,7 @@
                     <ul class="dropdown-menu">
                       <li><a href="{% url 'edit-room' %}">Room</a></li>
                       <li><a href="{% url 'edit-building' %}">Building</a></li>
-                      <li><a href="{% url 'review-room' %}">Selection</a></li>
+                      <li><a href="{% url 'review-room' %}">Transaction</a></li>
                       <li role="separator" class="divider"></li>
                       <li><a href="{% url 'edit' %}">View all options</a></li>
                     </ul>
