--- a/staff/templates/staff/select/suiteStudentInfo.html
+++ b/staff/templates/staff/select/suiteStudentInfo.html
@@ -65,15 +65,15 @@
                             </div>
                             <!-- Student information fields -->
                             {% for student in form.studentFields %}
-                                <div class="list-group-item">
+                                <div class="list-group-item student-group">
                                     <div class="container-fluid">
-                                        <h4 class="PullField text-center resident-header">
+                                        <h4 class="text-center resident-header">
                                             Resident {{forloop.counter}}
                                         </h4>
 
                                         {% for field in student %}
                                             {% if not forloop.parentloop.parentloop.first %}
-                                                <div class="form-group form-group-lg PullField">
+                                                <div class="form-group form-group-lg">
                                             {% else %}
                                                 <div class="form-group form-group-lg">
                                             {% endif %}
