Added yellow line under all the titles on forms

--- a/staff/templates/staff/LotteryNumberInput.html
+++ b/staff/templates/staff/LotteryNumberInput.html
@@ -40,6 +40,7 @@
             <div class="col-md-2"></div>
             <div class="col-md-8">
                 <h1>Input the Next Lottery Number</h1>
+                <hr class="yellow-line">
                 <p class="lead">Current Number: {{ LotteryNumber }}</p>
                 <form method="POST" class="post-form form-horizontal">
                     <div class="container-fluid">
