--- a/staff/templates/staff/edit/building.html
+++ b/staff/templates/staff/edit/building.html
@@ -42,6 +42,7 @@
                 <h1>
                     Edit Building Information
                 </h1>
+                <hr class="yellow-line">
                 <form method="POST" class="post-form form-horizontal">
                 {% csrf_token %}
                 <div class="container-fluid">
