--- a/staff/templates/staff/edit/transactionStudentInfo.html
+++ b/staff/templates/staff/edit/transactionStudentInfo.html
@@ -47,7 +47,7 @@
                 <p class="lead">
                     {{ HeaderText }}
                 </p>
-            
+            <hr class="yellow-line">
             <form method="POST" class="post-form form-horizontal" action="{{Action}}">
                 {% csrf_token %}
                 <div class="container-fluid">
