--- a/staff/templates/staff/select/room.html
+++ b/staff/templates/staff/select/room.html
@@ -46,6 +46,7 @@
 
       <div class="starter-template">
         <h1>Room Selection</h1>
+          <hr class="yellow-line">
           <div class="container-fluid">
             <form method="POST" class="post-form form-horizontal" action="{{Action}}">{% csrf_token %}
 
