--- a/staff/templates/staff/select/suiteStudentInfo.html
+++ b/staff/templates/staff/select/suiteStudentInfo.html
@@ -44,7 +44,8 @@
           <div class="col-md-8 container-fluid form-container">
                 <h1>Student Information</h1>
                 <p class="lead">Enter student information for each room in the selected suite.</p>
-                <form role="form" method="POST" class="post-form form-horizontal" action="{{Action}}">
+                <hr class="yellow-line">  
+              <form role="form" method="POST" class="post-form form-horizontal" action="{{Action}}">
               
                     {% csrf_token %}
                     
