--- a/staff/templates/staff/edit/room.html
+++ b/staff/templates/staff/edit/room.html
@@ -40,6 +40,7 @@
             <div class="col-md-2 hidden-xs hidden-sm"></div>
             <div class="container-fluid col-md-8 form-container">
                 <h1>Edit Room Information</h1>
+                <hr class="yellow-line">
                 <form method="POST" class="post-form form-horizontal">
                 {% csrf_token %}
                 <div class="container-fluid">
