--- a/staff/templates/staff/edit/transaction.html
+++ b/staff/templates/staff/edit/transaction.html
@@ -44,6 +44,7 @@
             <div class="col-md-2 hidden-xs hidden-sm"></div>
             <div class="container-fluid col-md-8 form-container">
                 <h1>Review a Transaction</h1>
+                <hr class="yellow-line">
                 <p class="lead">
                     {{ HeaderText }}
                 </p>
