--- a/staff/templates/staff/select/suite.html
+++ b/staff/templates/staff/select/suite.html
@@ -41,6 +41,7 @@
               <div class="col-md-2 hidden-xs hidden-sm"></div>
               <div class="container-fluid col-md-8 form-container">
                 <h1>Suite Selection</h1>
+                <hr class="yellow-line">
                 <p class="lead">{{headerText}}</p>
 
                 {% if suites %}
