--- a/students/templates/students/all.html
+++ b/students/templates/students/all.html
@@ -31,18 +31,17 @@
 <!-- filter by room type dropdown available, if there are more than 1 type of room -->
 {% if room_types|length > 1 %}
 <select id="roomTypeFilter" class="selectpicker room-list-filter room-type-filter" multiple title="All Room Types">
-    <option name="all" value="all">All Room Types</option>
-        {% for type in room_types %}
-            {% if type == 'S' %}
-                <option name="type{{type}}" value="type{{type}}">Single</option>
-            {% elif type == 'D' %}
-                <option name="type{{type}}" value="type{{type}}">Double</option>
-            {% elif type == 'T' %}
-                <option name="type{{type}}" value="type{{type}}">Triple</option>
-            {% elif type == 'Q' %}
-                <option name="type{{type}}" value="type{{type}}">Quad</option>
-            {% endif %} 
-    {% endfor %}
+    {% for type in room_types %}
+        {% if type == 'S' %}
+            <option name="type{{type}}" value="type{{type}}">Single</option>
+        {% elif type == 'D' %}
+            <option name="type{{type}}" value="type{{type}}">Double</option>
+        {% elif type == 'T' %}
+            <option name="type{{type}}" value="type{{type}}">Triple</option>
+        {% elif type == 'Q' %}
+            <option name="type{{type}}" value="type{{type}}">Quad</option>
+        {% endif %} 
+{% endfor %}
 </select>
 {% endif %}
 
@@ -57,72 +56,40 @@
                   <th>Building</th>
                   <th>#</th>
                   <th>Type</th>
-                  <th>Beds</th>
-                  {# link to building page? onclick="window.location='{{building_url}}'" #}
+                  <th>Open Beds</th>
                 </tr>
               </thead>
               <tbody class="room-list">
-                {% comment %}
-                  <!--
-                    rooms_by_floor list looks like this:
-                    'rooms_by_floor': {'101': <Room object 101>, '10': [<Room 102>, <Room 110>, <Room 152>]}
-                    -->
-                {% endcomment %}
 
                 {% for room in rooms %}
+                    <tr name="{{room}}" class="floor{{room.floor}} type{{room.room_type}} bldg{{room.building.name|cut:' '}}">
+                        <td>{{room.building.name}}</td>
+                        <td>{{room.number}}</td>
 
-                    <!-- An apartment - not a dropdown on all rooms page -->
-                    {% if room.apartment %}
-                        {# {% url 'building-view' apt.building.name as building_url %} #}
-                        <tr name="{{room.name}}" class="{{room.floor}}{{room.room_type}} bldg{{apt.building.name|cut:' ' }}">
-                            <td>{{room.building.name}}</td>
-                            <td>{{room.number}}</td>
-                            <td>
-                            {% if room.room_type == 'S' %}
-                                Single
-                            {% elif room.room_type == 'D' %}
-                                Double
-                            {% elif room.room_type == 'T' %}
-                                Triple
-                            {% elif room.room_type == 'Q' %}
-                                Quad
-                            {% endif %}
-                            </td>
-                            <td>{{room.available_beds}}</td>
-                        </tr>
-
-                    <!-- Regular room -->
-                    {% else %}
-                        {% url 'building-view' rm.building.name as building_url %}
-                        <tr name="{{room}}" class="floor{{room.floor}} type{{room.room_type}} bldg{{room.building.name|cut:' '}}">
-                            <td>{{room.building.name}}</td>
-                            <td>{{room.number}}</td>
-
-                            <!-- Room Type -->
-                            <td>
-                            {% if room.room_type == 'S' %}
-                                Single
-                            {% elif room.room_type == 'D' %}
-                                Double
-                            {% elif room.room_type == 'T' %}
-                                Triple
-                            {% elif room.room_type == 'Q' %}
-                                Quad
-                            {% elif room.room_type == 'B' %}
-                                {% if room.building.name == "Morris" %}
-                                  Apartment
-                                {% else %}
-                                  Suite
-                                {% endif %}
+                        <!-- Room Type -->
+                        <td>
+                        {% with type=room.room_type %}
+                        {% if type == 'S' %}
+                            Single
+                        {% elif type == 'D' %}
+                            Double
+                        {% elif type == 'T' %}
+                            Triple
+                        {% elif type == 'Q' %}
+                            Quad
+                        {% elif type == 'B' %}
+                            {% if room.building.name == "Morris" %}
+                              Apartment
                             {% else %}
-                                N/A
+                              Suite
                             {% endif %}
-                            </td>
+                        {% endif %}
+                        {% endwith %}
+                        </td>
 
-                            <td>{{room.available_beds}}</td>
+                        <td>{{room.available_beds}}</td>
 
-                        </tr>
-                    {% endif %}
+                    </tr>
                 {% endfor %}
               </tbody>
             </table>
