Room select looks more like other forms. Apartment select redirects to room select.

--- a/staff/templates/staff/header.html
+++ b/staff/templates/staff/header.html
@@ -16,7 +16,7 @@
                   <ul class="dropdown-menu">
                       <li><a href="{% url 'room-select' %}">Room</a></li>
                       <li><a href="{% url 'suite-select' %}">Suite</a></li>
-                      <li><a href="{% url 'select' %}">Apartment</a></li>
+                      <li><a href="{% url 'room-select' %}">Apartment</a></li>
                       <li role="separator" class="divider"></li>
                       <li><a href="{% url 'select' %}">View all options</a></li>
                   </ul>
