--- a/staff/templates/staff/select/select.html
+++ b/staff/templates/staff/select/select.html
@@ -72,7 +72,7 @@
               </div>
               <div class="row">
                   <div class="col-md-6">
-                      <a href="{% url 'select' %}" class="nodecor">
+                      <a href="{% url 'room-select' %}" class="nodecor">
                         <div class="landing-panel panel panel-info">
                             <div class="landing-panel-heading">
                                 <h3 class="landing-panel-title">Select an apartment</h3>
