1. Fixed triples and quads showing total/total to available/total. 2. Changed title for that panel to types of rooms available. 3. Changed title on all rooms page to all available rooms 4. Fixed staff nav bar to no longer have select apartment

--- a/students/templates/students/all.html
+++ b/students/templates/students/all.html
@@ -1,6 +1,6 @@
 {% extends "students/base.html" %}
 
-{% block title %}All Rooms{% endblock title %}
+{% block title %}All Available Rooms{% endblock title %}
 
 {% block custom-css %} 
     <link rel="stylesheet" href="/static/students/building/building.css">
