--- a/students/templates/students/header.html
+++ b/students/templates/students/header.html
@@ -1,13 +1,13 @@
-<nav role="navigation" class="navbar navbar-inverse navbar-fixed-top">
-    <div class="container-fluid">
-        
-        <!-- Site Name -->
-        <div class="navbar-header pull-left" style="padding-left: 5px;">
-            <button type="button" class="navbar-toggle" data-toggle="offcanvas" data-target=".sidebar">
+<nav role="navigation" class="navbar navbar-inverse navbar-fixed-top header">
+    <div class="container-fluid" id="header-container">
+        <button type="button" class="navbar-toggle" data-toggle="offcanvas" data-target=".sidebar">
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
+        
+        <!-- Site Name -->
+        <div class="navbar-header pull-left" style="padding-left: 5px;">
             <a class="navbar-brand navbar-site-name" href="{% url 'students-home' %}">Site Name</a>
          </div><!--/.navbar-header-->
         
@@ -20,7 +20,6 @@
                     {% endif %} 
                 </li>
             </ul>
-            
          </div><!--/.navbar-right-->
     </div><!--/.container-->
 </nav><!--/.navbar -->
