--- a/students/templates/students/sidebar.html
+++ b/students/templates/students/sidebar.html
@@ -7,9 +7,11 @@
                 </a>
             </li>
         </ul>
+        {% comment %}
         <div class="form-group">
             <input type="text" class="form-control sidebar-search" placeholder="Search Buildings" onkeyup="buildingFilter(this)" />
         </div>
+        {% endcomment %}
         <ul class="nav nav-pills nav-stacked" id="building-sidebar">
             
             {% for building in buildings %}
