--- a/students/static/students/header/header-departika.css
+++ b/students/static/students/header/header-departika.css
@@ -9,6 +9,9 @@
 
 .header {
     min-height: 65px;
+    background-color: #fbfdfd;
+    color: #545454;
+    border: none;
     /*vertical-align: middle;*/
 }
 
@@ -26,6 +29,18 @@
     line-height: 65px;
     font-size: 14pt;
     padding-right: 12px;
+    color: #545454;
+    font-family: 'Proza Libre', sans-serif;
+}
+
+.navbar-site-name {
+    color: #545454;
+    font-family: 'Proza Libre', sans-serif;
+}
+
+.navbar-site-name:hover,
+.navbar-site-name:active {
+    color: #ff383f;
 }
 
 .navbar-header {
