--- a/students/static/students/home/home-roomservice.css
+++ b/students/static/students/home/home-roomservice.css
@@ -1,3 +1,13 @@
+a {
+    color: #d1d1d1;
+}
+
+a:hover,
+a.active {
+    color: #002f86;
+    text-decoration: none;
+}
+
 #home-jumbotron {
     padding-bottom: 10px;
     padding-top: 10px;
@@ -11,14 +21,14 @@
 
 .landing-panel {
     border-radius: 0;
-    color: black;
+    color: white;
     border: none;
-    background-color: lightgray;
+    background-color: #a9a9a9;
     margin-bottom: 30px;
 }
 
 .landing-panel-heading {
-    background-color: lightgray;
+    background-color: #a9a9a9;
     border-radius: 0;
     padding-left: 15px;
     padding-right: 15px;
@@ -26,13 +36,23 @@
     padding-bottom: 15px;
 }
 
+/* hover colors */
+.landing-panel-button:hover > .landing-panel-heading {
+    background-color: #002f86;
+}
+
 .yellow-line {
-    border-color: #fbbd19;
+    border-color: #cdcdcd;
     margin-bottom: 30px;
 }
 
-.landing-panel-toggle > .landing-panel-heading:hover {
-    color: darkgray;
+.landing-panel-toggle:hover {
+    cursor: pointer; 
+    cursor: hand;
+}
+
+.landing-panel-toggle > .landing-panel-heading:hover > h3 > span {
+    color: #cdcdcd;
     
     /* apparently different browsers use different names */
     cursor: pointer; 
